force-app/main/default/objects/ContentVersion/fields/NKS_Content_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>NKS_Content_Document_Link__c</fullName>
    <description>Valid url to the content document the version relates to.</description>
    <label>Content Document Link</label>
    <type>Url</type>
</CustomField>