force-app/main/default/objects/ContentVersion/fields/NKS_Related_Video__c.field-meta.xml
<CustomField>
    <fullName>NKS_Related_Video__c</fullName>
    <description>Reference to a related video if this files has a direct relation</description>
    <externalId>true</externalId>
    <label>Related Video</label>
    <length>18</length>
    <type>Text</type>
</CustomField>