force-app/main/default/objects/ContentVersion/fields/NKS_Subtitle_Language__c.field-meta.xml
<CustomField>
    <fullName>NKS_Subtitle_Language__c</fullName>
    <description>Defines language for subtitle file to be uploaded</description>
    <label>Subtitle Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no</fullName>
                <label>Norwegian</label>
            </value>
            <value>
                <fullName>pl</fullName>
                <label>Polish</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>English</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>