force-app/main/default/objects/ContentVersion/fields/NKS_Subtitle_Link_Norwegian__c.field-meta.xml
<CustomField>
    <fullName>NKS_Subtitle_Link_Norwegian__c</fullName>
    <label>NKS Subtitle Link Norwegian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>