force-app/main/default/objects/ContentVersion/fields/NKS_Subtitle_Link_Polish__c.field-meta.xml
<CustomField>
    <fullName>NKS_Subtitle_Link_Polish__c</fullName>
    <label>NKS Subtitle Link Polish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>