force-app/main/default/objects/ContentVersion/fields/NKS_Subtitle_Links__c.field-meta.xml
<CustomField>
    <fullName>NKS_Subtitle_Links__c</fullName>
    <label>NKS Subtitle Links</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>