force-app/main/default/objects/ContentVersion/fields/NKS_Thumbnail_Link__c.field-meta.xml
<CustomField>
    <fullName>NKS_Thumbnail_Link__c</fullName>
    <description>Link to the thumbnail file to show on video file</description>
    <label>NKS Thumbnail Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>